style fix and search box defect fixes

--- a/pnp-modern-search-4.7.0/search-parts/src/webparts/searchBox/components/SearchBoxContainer.module.scss
+++ b/pnp-modern-search-4.7.0/search-parts/src/webparts/searchBox/components/SearchBoxContainer.module.scss
@@ -1,11 +1,13 @@
 .searchBox {
 
   position: relative;
+  margin-top: 40px;
 
   .searchBoxWrapper {
       display: flex;
       border: 1px solid #c2c2c2;
-
+      padding: 0px;
+      
       &:hover {
         border-color: #272727;
       }
