fix for business in search results web part

--- a/pnp-modern-search-4.7.0/search-parts/src/layouts/results/custom/results-custom.html
+++ b/pnp-modern-search-4.7.0/search-parts/src/layouts/results/custom/results-custom.html
@@ -87,7 +87,7 @@
                                 {{/if}}
                                 <div class="template--listItem--contentContainer">
                                     <span class="template--listItem--title example-themePrimary">
-                                        <a href="{{getResultUrl (slot item @root.slots.PreviewUrl) (slot item @root.slots.ListItemID) (slot item @root.slots.FunctionID)}}" target="_self" style="color:{{@root.theme.semanticColors.link}}" rel="noopener noreferrer">{{getTitle (slot item @root.slots.Title) (slot item @root.slots.FunctionID) (slot item @root.slots.Functions) (slot item @root.slots.BusinessID) (slot item @root.slots.Business)}}</a>
+                                        <a href="{{getResultUrl (slot item @root.slots.PreviewUrl) (slot item @root.slots.ListItemID) (slot item @root.slots.FunctionID) (slot item @root.slots.BusinessID)}}" target="_self" style="color:{{@root.theme.semanticColors.link}}" rel="noopener noreferrer">{{getTitle (slot item @root.slots.Title) (slot item @root.slots.FunctionID) (slot item @root.slots.Functions) (slot item @root.slots.BusinessID) (slot item @root.slots.Business)}}</a>
                                     </span>
                                     <span>                            
                                         <span class="template--listItem--author">
